bugfixes + dark mode

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
   text-align: center;
+  background-color: #121212;
+  color: #eee;
 }
 
 #wrapper {
@@ -8,7 +10,7 @@ body {
 }
 
 button {
-  width: 90%;
+  width: 100%;
   background-color: #2c2c2c;
   border: none;
   color: white;
@@ -16,7 +18,7 @@ button {
   text-decoration: none;
   display: block;
   font-size: 16px;
-  margin: 4px 2px;
+  margin: 6px 0;
   cursor: pointer;
 }
 
@@ -26,12 +28,20 @@ button {
 }
 
 .answers {
-  background-color: #4caf50;
+  background-color: #bb80fc;
   width: 100%;
 }
 
 .answers:hover {
-  background-color: #3e8e41;
+  background-color: #3700b3;
+}
+
+.correct {
+  background-color: #03dac6;
+}
+
+.incorrect {
+  background-color: #cf6679;
 }
 
 p {
@@ -55,7 +65,7 @@ p {
 }
 
 .navigate:hover {
-  background-color: #1a1a1a;
+  background-color: #3700b3;
 }
 
 #next-score {
